# ubu-ui

./: .gitignore  CHANGELOG.md  CODEGEN.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  codegen-task.yml  contract-change.yml  design-sync.yml
.github/workflows/: ci.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  sidecar.rs
src/api/: client.ts  queryClient.ts
src/components/: CalendarTimeline.tsx  DiagnosticsList.tsx  ExplanationDrawer.tsx  HumanCompleteSummary.tsx  Layout.tsx  NextTaskCard.tsx  PlanReports.tsx  ProjectionOperationList.tsx  RiskSummary.tsx  StatusBadge.tsx
src/routes/: Bootstrap.tsx  CalendarPreview.tsx  GitHubImport.tsx  LogReview.tsx  NextAction.tsx  Onboarding.tsx  PlanInspector.tsx  ProjectionPreview.tsx  Reports.tsx  Settings.tsx
src/state/: appState.ts  bootstrapState.ts
src/styles/: global.css
tests/: smoke.test.tsx
