[package]
name = "ubu-ui"
version = "0.1.0"
description = "UbU Phase 1 desktop UI"
authors = ["UbU Project contributors"]
license = "MIT"
repository = "https://github.com/UbU-project/ubu-ui"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
